src/test/deca/context/invalid/created/binary_exp/op_arith/plus_int_boolean.deca
// Description :
//    test plus entre un int et un boolean
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 11: L’opérande gauche est de type int, L’opérande droite est de type boolean. Or les opérandes d’un modulo doivent être de type ‘int’

{
int a;
boolean b;
int c = a + b;
}
